--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "*.{js,jsx,ts,tsx,json,html,md,svg,yml}": "prettier --write"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2"
   },
